# WEE2-TEST

./: README.md
Chatservice/: CMakeLists.txt  MyClient.cpp  MyServer.cpp
Chatserviceexe/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Chatservice.sln  MyClient.vcxproj  MyClient.vcxproj.filters  MyServer.vcxproj  MyServer.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
Chatserviceexe/Debug/: MyClient.ilk  MyServer.ilk
Chatserviceexe/MyClient.dir/Debug/: MyClient.exe.recipe
Chatserviceexe/MyClient.dir/Debug/MyClient.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Chatserviceexe/MyServer.dir/Debug/: MyServer.exe.recipe
Chatserviceexe/MyServer.dir/Debug/MyServer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.write.1.tlog  MyServer.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Chatserviceexe/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
Chatserviceexe/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
